@@ -107,6 +107,13 @@ JVM.
       (ignored if fork is disabled).</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">timeout</td>
+    <td valign="top">Stop the command if it doesn't finish within the
+    specified time (given in milliseconds).  <strong>It is highly
+    recommended to use this feature only if fork is enabled.</strong></td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 <h4>arg and jvmarg</h4>
